fixing blog post carousel spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -72,14 +72,14 @@ h4,
 .delta {
   font-size: em(20);
   color: $teal;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h5,
 .epsilon {
   font-size: em(16);
   color: $text-color;
-  line-height: 1;
+  line-height: 1.2;
 }
 //
 // h6,
